--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,15 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Mama</title>
+    <style>
+      body {
+        margin: 0;
+        padding: 0;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
